--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
     ]
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "loader": "^2.1.1",
+    "lodash.isempty": "^4.4.0",
+    "morgan": "^1.10.0",
     "yargs": "^15.3.1"
   },
   "bugs": {
