--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-  },
+     "start": "node api/index.js",
+       "dev": "nodemon api/index.js"  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/TetianaTG/node-js-30.git"
@@ -29,9 +28,12 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "loader": "^2.1.1",
     "lodash.isempty": "^4.4.0",
+    "mongodb": "^3.6.2",
+    "mongoose": "^5.10.6",
     "morgan": "^1.10.0",
     "yargs": "^15.3.1"
   },
