--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hw04",
+  "name": "hw03",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -31,5 +31,13 @@
     "mongoose": "^5.9.22",
     "mongoose-paginate-v2": "^1.3.9",
     "morgan": "^1.10.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TetianaTG/node-js-30.git"
+  },
+  "bugs": {
+    "url": "https://github.com/TetianaTG/node-js-30/issues"
+  },
+  "homepage": "https://github.com/TetianaTG/node-js-30#readme"
 }
