--- a/package.json
+++ b/package.json
@@ -1,48 +1,51 @@
 {
-  "name": "js-30",
+  "name": "hw05",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node api/index.js",
-
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TetianaTG/node-js-30.git"
+    "start": "node api/start.js",
+    "dev": "nodemon api/start.js",
+    "test": "mocha tests/test.spec.js",
+    "req-test": "mocha tests/acceptence-test.spec.js --exit"
   },
-  "keywords": [
-    "1111"
-  ],
-  "author": "Tetiana",
-  "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "mocha": "^8.1.3",
+    "nodemon": "^2.0.4",
+    "should": "^13.2.3",
+    "sinon": "^9.2.0",
+    "supertest": "^4.0.2"
   },
   "nodemonConfig": {
     "ignore": [
       "test/*",
-      "db/*"
+      "db/*",
+      "public/*",
+      "tmp/*",
+      "tests/*"
     ]
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
-    "contact": "^0.2.5",
-    "contacts": "^1.0.0",
+    "@sendgrid/mail": "^7.3.0",
+    "avatar-builder": "^1.0.1",
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "id": "0.0.0",
-    "loader": "^2.1.1",
+    "imagemin": "^7.0.1",
+    "imagemin-jpegtran": "^7.0.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash.isempty": "^4.4.0",
-    "model": "^6.0.1",
-    "mongodb": "^3.6.2",
-    "mongoose": "^5.10.6",
+    "mongoose": "^5.9.22",
+    "mongoose-paginate-v2": "^1.3.9",
     "morgan": "^1.10.0",
-    "yargs": "^15.3.1"
-  },
-  "bugs": {
-    "url": "https://github.com/TetianaTG/node-js-30/issues"
-  },
-  "homepage": "https://github.com/TetianaTG/node-js-30#readme"
+    "move-file": "^2.0.0",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.4.11",
+    "uuid": "^8.3.0"
+  }
 }
