--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@hapi/joi": "^17.1.1",
     "avatar-builder": "^1.0.1",
     "bcrypt": "^5.0.0",
+    "config": "^3.3.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "imagemin": "^7.0.1",
     "imagemin-jpegtran": "^7.0.0",
     "jsonwebtoken": "^8.5.1",
@@ -43,6 +45,7 @@
     "mongoose-paginate-v2": "^1.3.9",
     "morgan": "^1.10.0",
     "move-file": "^2.0.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "path": "^0.12.7"
   }
 }
