--- a/package.json
+++ b/package.json
@@ -42,9 +42,6 @@
     "lodash.isempty": "^4.4.0",
     "mongoose": "^5.9.22",
     "mongoose-paginate-v2": "^1.3.9",
-    "morgan": "^1.10.0",
-    "move-file": "^2.0.0",
-    "multer": "^1.4.2",
-    "path": "^0.12.7"
+    "morgan": "^1.10.0"
   }
 }
