--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash.isempty": "^4.4.0",
     "mongoose": "^5.9.22",
-    "mongoose-paginate-v2": "^1.3.9","morgan": "^1.10.0"
+    "mongoose-paginate-v2": "^1.3.9",
+    "morgan": "^1.10.0"
   }
 }
