--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node api/index.js",
+    "start": "node api/start.js",
     "dev": "nodemon api/start.js",
     "test": "mocha tests/test.spec.js",
     "req-test": "mocha tests/acceptence-test.spec.js --exit"
@@ -30,9 +30,9 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@sendgrid/mail": "^7.2.3",
     "avatar-builder": "^1.0.1",
     "bcrypt": "^5.0.0",
-    "config": "^3.3.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -42,6 +42,10 @@
     "lodash.isempty": "^4.4.0",
     "mongoose": "^5.9.22",
     "mongoose-paginate-v2": "^1.3.9",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "move-file": "^2.0.0",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.4.11",
+    "uuid": "^8.3.0"
   }
 }
