--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "hw03",
+  "name": "hw05",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node api/index.js",
-    "dev": "nodemon api/index.js"
+    "start": "node api/start.js",
+    "dev": "nodemon api/start.js",
+    "test": "mocha tests/test.spec.js",
+    "req-test": "mocha tests/acceptence-test.spec.js --exit"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "mocha": "^8.0.1",
+    "nodemon": "^2.0.4",
+    "should": "^13.2.3",
+    "sinon": "^9.0.2",
+    "supertest": "^4.0.2"
   },
   "nodemonConfig": {
     "ignore": [
       "test/*",
-      "db/*"
+      "db/*",
+      "public/*",
+      "tmp/*",
+      "tests/*"
     ]
   },
   "keywords": [],
@@ -22,14 +30,22 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@sendgrid/mail": "^7.2.3",
+    "avatar-builder": "^1.0.1",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "imagemin": "^7.0.1",
+    "imagemin-jpegtran": "^7.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash.isempty": "^4.4.0",
     "mongoose": "^5.9.22",
     "mongoose-paginate-v2": "^1.3.9",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "move-file": "^2.0.0",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.4.11",
+    "uuid": "^8.3.0"
   }
 }
